# zk-epd-calc

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Readme.md
host/: Cargo.toml
host/src/: main.rs
scripts/: docker-wrapper.sh
zk_building_part/: Cargo.toml  build.rs
zk_building_part/guest/: Cargo.toml
zk_building_part/guest/src/: lib.rs
zk_building_part/src/: guest_methods.rs  lib.rs
zk_building_part/src/test_files/: testCreateBPZKP.json  testing.sh
zk_epdcalc/: Cargo.toml
zk_epdcalc/src/: error.rs  handlers.rs  lib.rs  proving.rs  requests.rs  verify.rs
zk_epdcalc_core/: Cargo.toml
zk_epdcalc_core/src/: lib.rs
