[package]
name = "zk_building_part_guest"
version = "0.3.0"
edition = "2021"

[lib]
name = "zk_building_part_guest"
path = "src/lib.rs"

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
zk_epdcalc_core = {path = "../../zk_epdcalc_core"}
serde = { version = "1.0.210", features = ["derive", "rc"] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
